--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
-<title>EBS Input v3-69</title>
+<title>EBS Input v3-70</title>
 <script async="" defer="" src="https://accounts.google.com/gsi/client"></script>
 <script async="" defer="" src="https://apis.google.com/js/api.js"></script>
 <style>
@@ -325,7 +325,7 @@ button.action-main{ padding:8px 10px; border:none; border-radius:6px; font-weigh
 /* v3-58: slightly increase spacing after total row without changing other rows */
 .total-row + .actions{ margin-top:10px; }
 
-/* v3-69: visual balance - shift Currency + Total right edge left */
+/* v3-70: visual balance - shift Currency + Total right edge left */
 .cur-wrap{ transform: translateX(-4px); }
 .total-box{ margin-right:4px; }
 
@@ -335,7 +335,7 @@ button.action-main{ padding:8px 10px; border:none; border-radius:6px; font-weigh
 <body>
 <div class="container">
 <div class="header-wrap">
-<div class="branding-row"><b>EBS Input</b> <span>v3-69</span></div>
+<div class="branding-row"><b>EBS Input</b> <span>v3-70</span></div>
 <div class="header-btns">
 <button class="btn-lookup btn-pull" onclick="checkEditState(() =&gt; cachePull())">Pull local<br/>Lookups</button>
 <button class="btn-lookup btn-refresh" id="refresh_btn" onclick="checkEditState(() =&gt; initRefresh())">Refresh<br/>Lookups<br/>from Sheets</button>
@@ -442,7 +442,7 @@ button.action-main{ padding:8px 10px; border:none; border-radius:6px; font-weigh
 <div class="preview-wrap" id="previewArea"></div>
 <div id="auth_status">iOS Sync Status: Idle</div>
 <button id="log_btn" onclick="toggleLog(true)">Display Trace Log</button>
-<div id="trace_log" onclick="toggleLog(false)">Trace: v3-69 Logic Circuit Breaker active.</div>
+<div id="trace_log" onclick="toggleLog(false)">Trace: v3-70 Logic Circuit Breaker active.</div>
 </div>
 <!-- v3-58 Flow modal (forced overlay) -->
 <div class="modal" id="flow_modal">
@@ -529,7 +529,7 @@ button.action-main{ padding:8px 10px; border:none; border-radius:6px; font-weigh
 
   const SHEET_ID = "1DdjG4B8wB9llk7yOoRRO72G0XqHEgFkMIlLuusShA6E";
   const SHEET_TAB = "EBSinput";
-  const VER = "Excel Budget Sheet Input (v3-69)";
+  const VER = "Excel Budget Sheet Input (v3-70)";
   // v3-58: Support category detection must be dynamic and strict.
   // A Category is a Support category ONLY if its label starts with "Support" (case-sensitive, no trimming).
   function isSupportCategory(cat){ return (cat || "").startsWith("Support"); }
@@ -566,7 +566,7 @@ button.action-main{ padding:8px 10px; border:none; border-radius:6px; font-weigh
     // v3-58: enforce newline separation from first append
     const base = log.textContent && log.textContent.trim().length
       ? log.textContent
-      : "Trace: v3-69 Logic Circuit Breaker active.";
+      : "Trace: v3-70 Logic Circuit Breaker active.";
     log.textContent = base + "\n[" + now + "] " + msg;
     log.scrollTop = log.scrollHeight;
     console.log(msg);
@@ -1018,20 +1018,46 @@ logTrace("Action Triggered. (v3-58)");
 
     if (guidanceIfNoLookups()) return;
 
-    // v3-58: If edit is in confirm ("...") or active ("C"), allow Create to clone that row and abandon edit
+    // v3-70: Create is allowed during edit states:
+// - If confirm pending ("..."): clone that staging row and abandon edit.
+// - If active edit ("C"): create NEW row from current UI values (after validation) and abandon edit.
     const masterList = JSON.parse(localStorage.getItem("ebs_trf") || "[]");
-    if (pendingEdit !== -1 || editIndex !== -1){
-      const cloneIdx = (editIndex !== -1) ? editIndex : pendingEdit;
-      if (masterList[cloneIdx]){
-        masterList.push([...masterList[cloneIdx]]);
+
+    if (pendingEdit !== -1){
+      if (masterList[pendingEdit]){
+        masterList.push([...masterList[pendingEdit]]);
         localStorage.setItem("ebs_trf", JSON.stringify(masterList));
-        logTrace("Edit abandoned; record cloned into new staged row. (v3-58)");
+        logTrace("Edit abandoned; record cloned into new staged row. (v3-70)");
         localReset();
         return;
       }
     }
 
-    const fv = document.getElementById("colF").value;
+    if (editIndex !== -1){
+      const fv = document.getElementById("colF").value;
+      const hv = document.getElementById("colH").value;
+      const iv = document.getElementById("colI").value;
+
+      if (!fv || !hv || !iv || fv.includes("--") || hv.includes("--") || iv.includes("--")){
+        alert("Missing data.");
+        return;
+      }
+
+      const flowV = (document.getElementById("flowDisplay").innerText || "").trim();
+      if (!flowV || flowV === "--"){
+        flowPendingAction = "create"; // v3-70
+        openFlowModal();
+        return;
+      }
+
+      const finalPackage = buildRecordFromUI(); // uses current UI (edited) values
+      masterList.push(finalPackage);
+      localStorage.setItem("ebs_trf", JSON.stringify(masterList));
+      logTrace("Edit abandoned; NEW record created from current UI values. (v3-70)");
+      localReset();
+      return;
+    }
+const fv = document.getElementById("colF").value;
     const hv = document.getElementById("colH").value;
     const iv = document.getElementById("colI").value;
 
